@@ -8,6 +8,7 @@ Patches:
   Frederic Giudicelli <frederic.giudicelli@newpki.org>
   Tim Dijkstra <tim@famdijkstra.org>
   Tim Kosse <botg@users.sourceforge.net>
+  Sergio Talens-Oliag <Sergio.Talens@uv.es>
 
 Translations:
   Traditional Chinese:  Leo Liaw <leo@mis.ccu.edu.tw> 
