@@ -11,6 +11,7 @@ Version 1.2.6 (!!!!!!!!! 1.3.0 if includes plural forms !!!!!!!!!!!!!!!!)
 - [GTK2] added as-you-type spellchecking
 - position in translations list is no longer lost when saving the file
 - configure now correctly detects libdb4 with versioned symbols
+- "Find" tool now selects matches in text controls (Sergio Talens-Oliag)
 - added more translations:
      Punjabi (Amanpreet Singh Alam)
      Albanian (Besnik Bleta)
